# th-deploy-homelab

./: .envrc  .gitignore  .pre-commit-config.yaml  .yamllint  AGENTS.md  CLAUDE.md  GEMINI.md  Pulumi.prod.yaml  README.md  envrc-base.sh  pyproject.toml  renovate.json5  vendir.lock.yml  vendir.yml
.agents/skills/container-image-management/: SKILL.md
.agents/skills/container-rightsizing/: SKILL.md
.agents/skills/helm-chart-management/: SKILL.md
.agents/skills/homelab-ingress/: SKILL.md
.agents/skills/opentelemetry-alloy-config/: SKILL.md
.agents/skills/pulumi-operations/: SKILL.md
.agents/skills/python-pulumi-patterns/: SKILL.md
.github/: copilot-instructions.md
.github/actions/setup-project/: README.md  action.yml
.github/workflows/: build-restic-rclone.yml  copilot-setup-steps.yml  gemini-cli.yml  gemini-issue-automated-triage.yml  gemini-issue-scheduled-triage.yml  gemini-pr-review.yml  linters.yml  update-cloudnativepg-catalogs.yml
docs/: alloy-refactor.md  postgres-backends.md  postgresql-migration-plan.md  postgresql-migration-research.md
docs/examples/: cnpg_postgres.py  migrate-postgres.sh  statefulset_postgres.py
scripts/: generate-config-schema
services/backup/: .env.example  Pulumi.prod.yaml  Pulumi.yaml  README.md  __main__.py  pyproject.toml
services/backup/assets/: backup.sh.j2
services/backup/backup/: backup.py  config.py  cronjob.py
services/backup/scripts/: restic-helper.sh
services/immich/: Pulumi.prod.yaml  Pulumi.yaml  __main__.py  docker-compose.yml  pyproject.toml
services/immich/immich/: __init__.py  config.py  immich.py
services/ingress/: Pulumi.prod.yaml  Pulumi.yaml  README.md  __main__.py  pyproject.toml
services/ingress/assets/: README.md  synology-cert-deploy.sh
services/ingress/ingress/: acme.py  cloudflared.py  config.py  local_cloudflared.py
services/iot/: Pulumi.prod.yaml  Pulumi.yaml  pyproject.toml
services/iot/assets/alloy/: collect_loki.alloy  process_otel.alloy
services/iot/iot/: config.py  main.py  mosquitto.py  mqtt2prometheus.py  utils.py  zwave_controller.py
services/iot/src/iot/: config.py  main.py
services/kubernetes/: Pulumi.prod.yaml  Pulumi.test.yaml  Pulumi.yaml  README.md  __main__.py  pyproject.toml
services/kubernetes/assets/image-catalogs/: update-catalogs.sh
services/kubernetes/kubernetes/: certmanager.py  cloudnativepg.py  config.py  csi_nfs.py  metallb.py  metrics_server.py  microk8s.py  snap.py  traefik.py  vertical_pod_autoscaler.py
services/longhorn/: Pulumi.prod.yaml  Pulumi.yaml  README.md  __main__.py  pyproject.toml
services/longhorn/longhorn/: __init__.py  config.py  longhorn.py
services/mdns-reflector/: README.md  ansible.cfg  requirements.yaml  run-ansible.sh
services/mdns-reflector/playbooks/: main.yaml  mdns-reflector-alloy.yaml  mdns-reflector-avahi.yaml
services/mdns-reflector/templates/: avahi-daemon.conf.j2
services/monitoring/: Pulumi.dev.yaml  Pulumi.prod.yaml  Pulumi.yaml  __main__.py  pyproject.toml
services/monitoring/monitoring/: adguard_exporter.py  alloy.py  alloy_legacy.py  cadvisor_legacy.py  config.py  goldilocks.py  grafana.py  kube_state_metrics.py  main.py  main_legacy.py  mimir.py  mimir_buckets.py  mimir_legacy.py  node_exporter.py  prometheus_operator_crds.py  speedtest.py  trivy_operator.py  utils.py
services/n8n/: Pulumi.prod.yaml  Pulumi.yaml  __main__.py  pyproject.toml
services/n8n/n8n/: config.py  main.py  n8n.py
services/netboot/: Pulumi.prod.yaml  Pulumi.yaml  README.md  __main__.py  pyproject.toml
services/netboot/netboot/: __init__.py  config.py  netboot.py
services/netbox/: Pulumi.prod.yaml  Pulumi.yaml  __main__.py  pyproject.toml
services/netbox/netbox/: config.py  netbox.py
services/obsidian/: Pulumi.prod.yaml  Pulumi.yaml  __main__.py  pyproject.toml
services/obsidian/obsidian/: __init__.py  cloudflare.py  config.py  couchdb.py  utils.py
services/ollama/: Pulumi.prod.yaml  Pulumi.yaml  __main__.py  pyproject.toml
services/ollama/ollama/: config.py  main.py  ollama.py
services/paperless/: Pulumi.prod.yaml  Pulumi.yaml  __main__.py  pyproject.toml
services/paperless/docker/: Dockerfile  README.md
services/paperless/paperless/: backup.py  config.py  paperless.py  restore.py
services/proxmox/: .envrc  Pulumi.dev.yaml  Pulumi.yaml  __main__.py  pyproject.toml  requirements.yaml
services/proxmox/playbooks/: proxmox-node-exporter.yaml
services/proxmox/proxmox/: config.py
services/s3/: Pulumi.dev.yaml  Pulumi.prod.yaml  Pulumi.yaml  __main__.py  pyproject.toml
services/s3/s3/: config.py  minio.py
services/strava-sensor/: Pulumi.prod.yaml  Pulumi.yaml  __main__.py  pyproject.toml
services/strava-sensor/strava_sensor/: config.py  main.py  strava_sensor.py
services/svn/: Pulumi.prod.yaml  Pulumi.yaml  README.md  __main__.py  pyproject.toml
services/svn/assets/: httpd.conf
services/svn/scripts/: svnadmin.sh
services/svn/svn/: config.py  main.py  svn.py
services/tandoor/: Pulumi.prod.yaml  Pulumi.yaml  __main__.py  pyproject.toml
services/tandoor/tandoor/: config.py  main.py  tandoor.py
services/unifi/: Pulumi.prod.yaml  Pulumi.yaml  __main__.py  ansible.cfg  pyproject.toml  run-ansible-prod
services/unifi/inventory/prod/: hosts.py
services/unifi/playbooks/: install-acme.yaml  main.yaml
services/unifi/roles/ensure-acme-certificate/defaults/: main.yaml
services/unifi/roles/ensure-acme-certificate/tasks/: main.yaml
services/unifi/roles/ensure-acme-certificate/templates/: unifi-osserver-ssl-import-wrapper.sh.j2
services/unifi/roles/ensure-acme/defaults/: main.yaml
services/unifi/roles/ensure-acme/tasks/: main.yaml
services/unifi/unifi/: config.py  unifi.py
src/deploy_base/: model.py  port_forward.py
src/iot/: zwave_controller.py
utils/: .gitignore  pyproject.toml
utils/src/deploy_base/: postgres.py
utils/src/deploy_base/opnsense/: base.py
utils/src/utils/: cloudflare.py  docker.py  k8s.py  model.py  onepassword.py  postgres.py  proxmox.py  utils.py
utils/src/utils/opnsense/: base.py
utils/src/utils/opnsense/unbound/: host_override.py
(+34 files in other folders)
