[project]
name = "homelab"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    # Fixed pulumi deps for global pinning
    "pulumi-cloudflare==6.12.0",
    "pulumi-command==1.1.3",
    "pulumi-docker==4.11.0",
    "pulumi-kubernetes==4.24.1",
    "pulumi-minio==0.16.7",
    "pulumi-onepassword==1.1.3",
    "pulumi-proxmoxve==7.11.0",
    "pulumi-pulumiservice>=0.32.0",
    "pulumi-random==4.18.5",
    "pulumi==3.215.0",
    # Workspaces
    "backup",
    "immich",
    "ingress",
    "iot",
    "kubernetes",
    "monitoring",
    "n8n",
    "ollama",
    "paperless",
    "proxmox",
    "s3",
    "svn",
    "tandoor",
    "unifi",
]

[dependency-groups]
dev = [
    "distlib>=0.3.9",
    "filelock>=3.16.1",
    "platformdirs>=4.3.6",
    "pre-commit>=4.0.1",
    "pyrefly>=0.41.3",
    "pyright>=1.1.390",
    "ruff>=0.8.2",
    "types-pyyaml>=6.0.12.20250915",
    "types-requests>=2.32.4.20250913",
    "yamllint>=1.35.1",
]

[tool.uv.sources]
backup = { workspace = true }
immich = { workspace = true }
ingress = { workspace = true }
iot = { workspace = true }
kubernetes = { workspace = true }
monitoring = { workspace = true }
n8n = { workspace = true }
ollama = { workspace = true }
paperless = { workspace = true }
proxmox = { workspace = true }
s3 = { workspace = true }
svn = { workspace = true }
tandoor = { workspace = true }
unifi = { workspace = true }
utils = { workspace = true }

[tool.uv]
package = false

[tool.uv.workspace]
members = ["services/*", "utils"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["docs/examples"]
extend-include = ["scripts/generate-config-schema"]

[tool.ruff.lint]
extend-select = [
    "A",      # flake8-builtins
    "C4",     # flake8-comprehensions
    "ERA",    # flake8-eradicate (commented out code)
    "G",      # flake8-logging-format
    "I",      # isort
    "ISC",    # flake8-implicit-str-concat
    "PL",     # Pylint
    "RET",    # flake8-return
    "RUF100", # unused noqa
    "SLF",    # flake8-self
]
ignore = [
    "ISC001",  # single line string concat
    "PLR0912", # too many branches
    "PLR0913", # too many arguments
    "PLR0915", # too many statements
    "PLR2004", # magic value used in comparison
    "PLR1711", # useless return
]

[tool.ruff.lint.isort]
lines-between-types = 1

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "SLF001", # allow access to private members in tests
]

[tool.ruff.format]
quote-style = "single"

[tool.pyright]
deprecateTypingAliases = true
useLibraryCodeForTypes = true
include = ["scripts", "services", "utils", "*.py"]
exclude = [
    "__pycache__",
    ".venv",
    ".vscode",
    "build",
    "dist",
    "docs/examples",
    "node_modules",
    "venv",
]
reportUnnecessaryTypeIgnoreComment = true
venv = ".venv"
venvPath = "."

[tool.config-models.backup]
root = "services/backup"
model = "backup.config:PulumiConfigRoot"

[tool.pyrefly]
project-includes = ["scripts", "services", "utils", "**/*.py"]
disable-project-excludes-heuristics = true
infer-with-first-use = false
python-interpreter-path = ".venv/bin/python3"

[tool.config-models.immich]
root = "services/immich"
model = "immich.config:PulumiConfigRoot"

[tool.config-models.ingress]
root = "services/ingress"
model = "ingress.config:PulumiConfigRoot"

[tool.config-models.iot]
root = "services/iot"
model = "iot.config:PulumiConfigRoot"

[tool.config-models.kubernetes]
root = "services/kubernetes"
model = "kubernetes.config:PulumiConfigRoot"

[tool.config-models.monitoring]
root = "services/monitoring"
model = "monitoring.config:PulumiConfigRoot"

[tool.config-models.n8n]
root = "services/n8n"
model = "n8n.config:PulumiConfigRoot"

[tool.config-models.ollama]
root = "services/ollama"
model = "ollama.config:PulumiConfigRoot"

[tool.config-models.paperless]
root = "services/paperless"
model = "paperless.config:PulumiConfigRoot"

[tool.config-models.proxmox]
root = "services/proxmox"
model = "proxmox.config:PulumiConfigRoot"

[tool.config-models.s3]
root = "services/s3"
model = "s3.config:PulumiConfigRoot"

[tool.config-models.unifi]
root = "services/unifi"
model = "unifi.config:PulumiConfigRoot"

[tool.config-models.svn]
root = "services/svn"
model = "svn.config:PulumiConfigRoot"

[tool.config-models.tandoor]
root = "services/tandoor"
model = "tandoor.config:PulumiConfigRoot"
