[project]
name = "utils"
version = "0.1.0"
requires-python = ">=3.14"

dependencies = [
    "pulumi-kubernetes>=4.21.0",
    "pulumi-postgresql>=3.15.0",
    "pulumi-random>=4.18.0",
    "pydantic>=2.11.4",
    "requests>=2.32.3",
]

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"
