[build-system]
requires = ["uv_build>=0.9.3,<0.10.0"]
build-backend = "uv_build"

[project]
name = "immich"
version = "0.1.0"
description = "Immich photo management service"
requires-python = ">=3.11"

dependencies = [
    "pulumi>=3.0.0,<4.0.0",
    "pulumi-kubernetes>=4.0.0,<5.0.0",
    "pulumi-postgresql>=3.0.0,<4.0.0",
    "pulumi-random>=4.0.0,<5.0.0",
    "utils",
]

[tool.uv.build-backend]
module-name = "immich"
module-root = ""
