[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"

[project]
name = "kubernetes"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = ["pulumiverse-talos==0.6.0", "pulumiverse_acme==0.13.0", "utils"]

[tool.uv.build-backend]
module-name = "kubernetes"
module-root = ""
