[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[project]
name = "kubernetes"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = ["pulumiverse_acme==0.14.0", "requests>=2.31.0", "utils"]

[tool.uv.build-backend]
module-name = "kubernetes"
module-root = ""
