[project]
name = "longhorn"
version = "0.1.0"
description = "Longhorn distributed block storage for Kubernetes"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pulumi>=3.0.0,<4.0.0",
    "pulumi-kubernetes>=4.0.0,<5.0.0",
    "utils",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["longhorn"]
