[project]
name = "unifi"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
    "pulumi>=3.166.0",
    "pulumi-cloudflare>=6.1.2",
    "pulumi-command>=1.0.1",
    "pulumi-docker>=4.6.1",
    "pulumi-proxmoxve>=6.18.0",
    "pulumi-tls>=5.1.0",
    "pulumiverse-acme>=0.7.0",
    "utils",
]
